compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__list_literals_redundant_comparison_7.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4244
expression: "pub fn main(a) { [a(1), 2] == [a(1), 3] }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(a) { [a(1), 2] == [a(1), 3] }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ pub fn main(a) { [a(1), 2] == [a(1), 3] }
  │                  ^^^^^^^^^^^^^^^^^^^^^^ This is always `False`

This comparison is redundant since it always fails.
