compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__missing_float_option_in_bit_array_constant_segment_requires_v1_10.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2609
expression: pub const bits = <<1.2>>
snapshot_kind: text
---
----- SOURCE CODE
pub const bits = <<1.2>>

----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:1:20
  │
1 │ pub const bits = <<1.2>>
  │                    ^^^ This requires a Gleam version >= 1.10.0

The ability to omit the `float` annotation for float segments was
introduced in version v1.10.0. But the Gleam version range specified in
your `gleam.toml` would allow this code to run on an earlier version like
v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.10.0"
