compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__missing_utf_8_option_in_bit_array_segment_requires_v1_5.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2562
expression: "\npub fn main() {\n  <<\"hello\">>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<"hello">>
}


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   <<"hello">>
  │     ^^^^^^^ This requires a Gleam version >= 1.5.0

The ability to omit the `utf8` annotation for string segments was
introduced in version v1.5.0. But the Gleam version range specified in your
`gleam.toml` would allow this code to run on an earlier version like
v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.5.0"
