compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__multiple_impossible_to_reach_integer_segments.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4496
expression: "\npub fn main(x) {\n  case x {\n    <<1, -1, 2, -3>> -> True\n    _ -> False\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<1, -1, 2, -3>> -> True
    _ -> False
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:4:5
  │
4 │     <<1, -1, 2, -3>> -> True
  │     ^^^^^^^^^^^^^^^^
  │          │      │
  │          │      A 1 byte unsigned integer will never match this value
  │          A 1 byte unsigned integer will never match this value

This pattern cannot be reached as it contains segments that will never
match.

Hint: It can be safely removed.
